--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,11 @@
+a {
+  color: #ee0000;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
 html, body {
   height: 100%;
 }
@@ -28,14 +36,6 @@ ol, ul {
 
 p {
   line-height: 180%;
-}
-
-a {
-  color: #ee0000;
-}
-
-a:hover {
-  text-decoration: none;
 }
 
 .container {
@@ -150,7 +150,7 @@ ul.contact li a.icon-rss:before {
   letter-spacing: 0.10em;
   margin-top: 2em;
   padding: 1.40em 3em;
-  background: #2651a8;
+  background: #ff1111;
   border-radius: 6px;
   text-decoration: none;
   font-weight: 700;
@@ -308,7 +308,7 @@ ul.contact li a.icon-rss:before {
 }
 
 #menu .active a {
-  background: #2651a8;
+  background: #ff1111;
   border-radius: 6px;
   color: white;
 }
@@ -379,7 +379,7 @@ ul.contact li a.icon-rss:before {
 #welcome {
   position: relative;
   padding: 7em 0em 7em 0em;
-  background: #2651a8;
+  background: #ff1111;
   background-size: cover;
   text-align: center;
 }
@@ -396,7 +396,7 @@ ul.contact li a.icon-rss:before {
 
 #welcome .button {
   background: #FFF;
-  color: #2651a8;
+  color: #ff1111;
 }
 
 /*********************************************************************************/
