--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,7 +146,7 @@ ul.contact li a:before {
   line-height: 40px;
   border-radius: 20px;
   text-align: center;
-  color: #FFFFFF;
+  color: #FFF;
 }
 
 ul.contact li a.icon-twitter:before {
